# FYS-1120

./: 01_Elektrisk_Felt.tex  FYS-1120.aux  FYS-1120.fdb_latexmk  FYS-1120.fls  FYS-1120.out  FYS-1120.tex  Untitled.ipynb  fys1120-prove-oppgave1-losning.ipynb  fys1120-prove-oppgave1.ipynb  fys1120-prove-oppgave2-losning.ipynb  fys1120-prove-oppgave2.ipynb  fys1120-prove-oppgave3-losning.ipynb  fys1120-prove-oppgave3.ipynb
.ipynb_checkpoints/: fys1120-prove-oppgave1-checkpoint.ipynb  fys1120-prove-oppgave2-checkpoint.ipynb  fys1120-prove-oppgave2-losning-checkpoint.ipynb
ELMAG_Module/: README.md  pyproject.toml
ELMAG_Module/src/: ELMAG_Module.py  Field.py
ELMAG_Module/src/OskarFieldModule.egg-info/: PKG-INFO
Eksamens øving/: ELMAG lekeplass.ipynb  Electric Fields and Potentials.ipynb  Magnetic Fields.ipynb
Innleveringer/Innlevering 1/: FYS1120_InnleveringU1.aux  FYS1120_InnleveringU1.fdb_latexmk  FYS1120_InnleveringU1.fls  FYS1120_InnleveringU1.tex  Linjeladninger_b  Linjeladninger_b.py  Linjeladninger_c.py
Lab/: Fys1120-2022-lab-01.ipynb
Oblig 1/: FYS-1120 Oblig 1 NoteBook.ipynb  FYS-1120 Oblig 1.aux  FYS-1120 Oblig 1.fdb_latexmk  FYS-1120 Oblig 1.fls  FYS-1120 Oblig 1.tex  FYS-1120_Oblig_1_Kode.py
U1/: Untitled.ipynb
