[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ELMAG_Module_Oskar_Idland"
version = "0.0.1"
authors = [
  { name="Oskar Idland", email="oskaridland@hotmail.com" },
]
description = "Package for calculating fields in the FYS-1120 Course "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""